# langchain-demo

./: README.md  pyproject.toml  test_debug.py
assets/: sample.csv  sample.docx  sample.json  sample.md  sample.txt
chapter01-summary/: HelloWorld.ipynb
chapter02-model IO/2.2 调用在线模型/: 2.2.2 OpenAI SDK 调用模型.py  2.2.3 API-Key 管理-1_使用 .env 配置文件.py  2.2.3 API-Key 管理-2_依靠 OpenAI 的默认行为读取 .env 环境变量.py  2.2.7 调用方法-1_invoke() 调用.py  2.2.7 调用方法-2_stream() 流式输出.py  2.2.7 调用方法-5_使用 ainvoke() 异步调用.py
chapter02-model IO/2.4 Prompt Template/: 2.4.3 PromptTemplate-1_使用构造方法实例化提示词模板.py  2.4.3 PromptTemplate-2_使用 from_template 方法实例化提示词模板.py  2.4.3 PromptTemplate-3_实例化过程中指定 partial_variables 参数.py  2.4.3 PromptTemplate-4_使用 partial 方法指定默认值.py  2.4.4 ChatPromptTemplate-2_invoke 方法调用.py  2.4.5 外部加载Prompt-1_json格式提示词.py  2.4.5 外部加载Prompt-2_yaml格式提示词.py
chapter02-model IO/2.6 Structured Outputs/: 2.6.1 TypedDict.py  2.6.2 Pydantic.py
chapter03-chains/: 3.3RunnableParallel 可运行并行.py  3.5RunnablePassthrough 可运行透传-1_保留中间结果.py  3.5RunnablePassthrough 可运行透传-2_使用 assign() 向输出中添加键.py  3.7RunnableWithFallbacks 可运行带回退-1.py
chapter04-Retrieval/4.2文档加载/: 4.2.1加载 TXT.py  4.2.2加载 CSV.py  4.2.3加载 JSON-1_提取所有字段.py  4.2.3加载 JSON-2_提取指定字段中的内容.py  4.2.4加载 HTML 网页.py  4.2.5加载 Markdown.py  4.2.6加载 Doc or Docx.py  4.2.7加载 PDF-1_PyPDFLoader.py  4.2.7加载 PDF-2_UnstructuredPDFLoader.py  4.2.7加载 PDF-3_MinerU.py
chapter04-Retrieval/4.4文档嵌入/: 举例.py
chapter04-Retrieval/4.5向量存储/: 4.5.4创建 Collection.py  4.5.5操作实体-1_插入实体.py  4.5.5操作实体-2_查询实体.py  4.5.5操作实体-3_删除实体.py
docs/tutorials/: rag.ipynb
sgg/: README.md
(+50 files in other folders)
